--- a/src/style/banner.css
+++ b/src/style/banner.css
@@ -1,8 +1,8 @@
 .banner {
   color: white;
   object-fit: contain;
-
   height: 448px;
+  /* height: 56.25vw; */
 }
 .banner__contents {
   margin-left: 30px;
